Add security measures in form of login and user roles

--- a/templates/measurement/index.html.twig
+++ b/templates/measurement/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <h1>Measurement index</h1>
-
+    {% if is_granted('ROLE_MEASUREMENT_INDEX') %}
     <table class="table">
         <thead>
             <tr>
@@ -31,8 +31,12 @@
                 <td>{{ measurement.air }}</td>
                 <td>{{ measurement.smog }}</td>
                 <td>
+                    {% if is_granted('ROLE_MEASUREMENT_SHOW') %}
                     <a href="{{ path('app_measurement_show', {'id': measurement.id}) }}">show</a>
+                    {% endif %}
+                    {% if is_granted('ROLE_MEASUREMENT_EDIT') %}
                     <a href="{{ path('app_measurement_edit', {'id': measurement.id}) }}">edit</a>
+                    {% endif %}
                 </td>
             </tr>
         {% else %}
@@ -42,6 +46,9 @@
         {% endfor %}
         </tbody>
     </table>
+    {% endif %}
 
-    <a href="{{ path('app_measurement_new') }}">Create new</a>
+    {% if is_granted('ROLE_MEASUREMENT_NEW') %}
+        <a href="{{ path('app_measurement_new') }}">Create new</a>
+    {% endif %}
 {% endblock %}
