--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,11 @@
                     <a class="nav-link" href="{{ path('app_measurement_index') }}">Measurements</a>
                 </div>
             </div>
+            {%  if is_granted('ROLE_USER') %}
+                <a href="{{ path('app_logout') }}">Logout</a>
+            {% else %}
+                <a href="{{ path('app_login') }}">Login</a>
+            {% endif %}
         </div>
     </nav>
         {% block body %}{% endblock %}
