--- a/templates/location/show.html.twig
+++ b/templates/location/show.html.twig
@@ -32,7 +32,9 @@
 
     <a href="{{ path('app_location_index') }}">back to list</a>
 
-    <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+    {% if is_granted('ROLE_LOCATION_EDIT') %}
+        <a href="{{ path('app_location_edit', {'id': location.id}) }}">edit</a>
+    {% endif %}
 
     {{ include('location/_delete_form.html.twig') }}
 {% endblock %}
