--- a/templates/measurement/show.html.twig
+++ b/templates/measurement/show.html.twig
@@ -44,7 +44,9 @@
 
     <a href="{{ path('app_measurement_index') }}">back to list</a>
 
-    <a href="{{ path('app_measurement_edit', {'id': measurement.id}) }}">edit</a>
+    {% if is_granted('ROLE_MEASUREMENT_EDIT') %}
+        <a href="{{ path('app_measurement_edit', {'id': measurement.id}) }}">edit</a>
+    {% endif %}
 
     {{ include('measurement/_delete_form.html.twig') }}
 {% endblock %}
